--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,10 @@
 # DataSource configuration
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcontact
-
-spring.datasource.username=root
-spring.datasource.password=TMNS3j6$9
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate (JPA) configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+spring.profiles.active=${ENV:dev}
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
