--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:47853/railway
 spring.datasource.username=root
-spring.datasource.password=TMNS3j6$9
+spring.datasource.password=AFg1CGFF3g6H15BFe1g2E1GE5bdGC-aD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
