--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate (JPA) configuration
-spring.profiles.active=${ENV:dev}
+spring.profiles.active=${ENV:prod}
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
