--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,4 @@ spring.datasource.password=AFg1CGFF3g6H15BFe1g2E1GE5bdGC-aD
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
