--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:47853/railway
+
+spring.datasource.url=jdbc:mysql://localhost:3306/smartcontact
+
 spring.datasource.username=root
-spring.datasource.password=AFg1CGFF3g6H15BFe1g2E1GE5bdGC-aD
+spring.datasource.password=TMNS3j6$9
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
