--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,12 @@
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
 # Hibernate (JPA) configuration
 spring.profiles.active=${ENV:dev}
 spring.thymeleaf.prefix=classpath:/templates/
