--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,13 @@ jobs:
       with:
         name: smartcontact-app
         path: target/*.war
+        
+   - name: Build & push Docker image
+     uses: mr-smithers-excellent/docker-build-push@v5
+    with:
+      image: parveezkhan/smart-contact-manager  # Change this to your image name
+      tags: latest
+      registry: docker.io
+      dockerfile: Dockerfile
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
