--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
         
    - name: Build & push Docker image
      uses: mr-smithers-excellent/docker-build-push@v5
-    with:
-      image: parveezkhan/smart-contact-manager  # Change this to your image name
+     with:
+      image: parveezkhan/smart-contact-manager 
       tags: latest
       registry: docker.io
       dockerfile: Dockerfile
