--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,6 @@ jobs:
     - name: Wait for MySQL to be ready
       run: ./wait-for-it.sh localhost:3306 --timeout=60 --strict -- echo "MySQL is up"
 
-
     - name: Run tests
       run: mvn test
 
@@ -65,13 +64,13 @@ jobs:
       with:
         name: smartcontact-app
         path: target/*.war
-        
-   - name: Build & push Docker image
-     uses: mr-smithers-excellent/docker-build-push@v5
-     with:
-      image: parveezkhan/smart-contact-manager 
-      tags: latest
-      registry: docker.io
-      dockerfile: Dockerfile
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build & push Docker image  # Fix indentation
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: parveezkhan/smart-contact-manager
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
